<resources>
    <string name="app_name">Successorator</string>
    <string name="placeholder">Placeholder</string>
    <string name="hello_world">Hello, World!</string>
    <string name="h">H</string>
    <string name="w">W</string>
    <string name="e">E</string>
    <string name="s">S</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="daily">Daily</string>
    <string name="one_time">One Time</string>
    <string name="text">Text</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="pending">Pending</string>
    <string name="recurring">Recurring</string>
    <string name="today_mo_3_4">Today Mo 3/4</string>
    <string name="add_goal">add goal</string>
    <string name="no_goals_for_the_day_click_the_at_the_upper_right_to_enter_your_most_important_thing">No goals for the Day. Click the + at the upper right to enter your Most Important Thing.</string>
</resources>