<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/card_edit_text"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/text"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <RadioGroup
        android:id="@+id/HWSE_RadioButton"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_edit_text">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <RadioButton
                android:id="@+id/focusTypeLabel"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginStart="30dp"

                android:background="@drawable/ic_filled_circle"
                android:backgroundTint="@color/H_color"
                android:button="@null"
                android:buttonTint="@color/black"
                android:checked="false"
                android:gravity="center"
                android:text="@string/h"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/W_button"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <RadioButton
                android:id="@+id/W_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_filled_circle"
                android:backgroundTint="@color/W_color"
                android:button="@null"
                android:buttonTint="@color/black"
                android:gravity="center"
                android:text="@string/w"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/S_button"
                app:layout_constraintStart_toEndOf="@+id/focusTypeLabel"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/E_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/ic_filled_circle"
                android:backgroundTint="@color/E_color"
                android:button="@null"
                android:buttonTint="@color/black"
                android:checked="true"
                android:gravity="center"
                android:text="@string/e"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/S_button"
                app:layout_constraintTop_toTopOf="parent" />

            <RadioButton
                android:id="@+id/S_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_filled_circle"
                android:backgroundTint="@color/S_color"
                android:button="@null"
                android:buttonTint="@color/black"
                android:text="@string/s"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/E_button"
                app:layout_constraintStart_toEndOf="@+id/W_button"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </RadioGroup>

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/HWSE_RadioButton">

        <RadioButton
            android:id="@+id/one_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one_time" />

        <RadioButton
            android:id="@+id/daily"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/daily" />

        <RadioButton
            android:id="@+id/weekly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/weekly" />

        <RadioButton
            android:id="@+id/monthly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monthly" />

        <RadioButton
            android:id="@+id/yearly"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/yearly" />

    </RadioGroup>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="8dp"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>